# bayesian_filters

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: UnitTests.yml
cmake/: cppcheck.cmake  cpplint.cmake
components/: CMakeLists.txt
components/filter_factory/: CMakeLists.txt
components/filter_factory/include/: bayesian_filter_factory.hpp
components/filter_factory/src/: bayesian_filter_factory.cpp
components/filters/: CMakeLists.txt
components/filters/include/: core_bayesian_filter.hpp  extended_kalman_filter.hpp  kalman_filter.hpp  particle_filter.hpp  unscented_kalman_filter.hpp
components/filters/src/: core_bayesian_filter.cpp  extended_kalman_filter.cpp  kalman_filter.cpp  particle_filter.cpp  unscented_kalman_filter.cpp
examples/: CMakeLists.txt  example.cpp
include/: bayesian_filter.hpp
include/io/: covariance.hpp  filter_calibration.hpp  filter_type.hpp  value_with_timestamp_and_covariance.hpp
src/: bayesian_filter.cpp
tests/: CMakeLists.txt  bayesian_filter_tests.cpp  filter_factory_tests.cpp
